--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^1.9.7",
     "bootstrap": "^5.3.2",
+    "infinite-react-carousel": "^1.2.11",
     "mdb-ui-kit": "^6.4.2",
     "react": "^18.2.0",
-
     "react-axios": "^2.0.6",
-
-    "infinite-react-carousel": "^1.2.11",
-
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "sass": "^1.58.0"
   },
