--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
     "infinite-react-carousel": "^1.2.11",
+    "mdb-react-ui-kit": "^7.0.0",
     "mdb-ui-kit": "^6.4.2",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
@@ -37,11 +38,14 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.52.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.31",
     "sass": "^1.69.5",
+    "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
   }
 }
