--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.11.0",
     "react-push-notification": "^1.5.3",
     "react-query": "^3.39.3",
+    "react-rating": "^2.0.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "redux": "^4.2.1",
