--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.4",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^1.9.7",
+    "@stripe/react-stripe-js": "^2.3.2",
+    "@stripe/stripe-js": "^2.1.11",
     "@tanstack/react-query": "^5.8.1",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
